# Omelet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/config/: 2_5d_org_mesh.yaml  3d_org_mesh.yaml
examples/layout/: 2_5d.yaml  3d.yaml
examples/network/: meshnoi.yaml  network_2_5d.yaml  network_3d.yaml  noc.yaml  nol.yaml
examples/placement/: place_model_2_5d.yaml  place_model_3d.yaml
examples/system/: system_2_5d.yaml  system_3d.yaml
gem5_patch/: 001_latency_breakdown.patch  002_network_link_breakdown.patch  003_garnetlink_params.patch  004_misc_breakdown_propagation.patch  005_basiclink_serdes_offchip.patch  006_sconstruct_conda_gcc_detect.patch  007_addr_range_nonpow2.patch
omelet/: cli.py
omelet/backends/: base.py
omelet/backends/gem5/: __init__.py  adapter.py
omelet/dse/: __init__.py  analyze.py  cli.py  evaluate.py  search.py  space.py
omelet/inputs/: __init__.py  loader.py  spec.py  validate.py
omelet/linkmodel/: engine.py  tables.py  width.py
omelet/nox/: builders.py  energy.py  graph.py
omelet/nox/hierarchy/: connect_noi_noc_meshmesh.py  fullblown_vertical.py  intra_chiplet.py  mesh_horiz_inter_chiplet.py  vert_inter_chiplet.py
omelet/placement/: __init__.py  __main__.py  autoplace.py  engine.py  grid.py  lengths.py
omelet/techlib/: __init__.py
omelet/techlib/epb_tbls/: 3d_f2f_cucu5_epb_table.yaml  3d_f2f_hybrid1_epb_table.yaml  3d_f2f_ubump10_epb_table.yaml  org_cucu_epb_table.yaml  org_solder_epb_table.yaml  org_ubump_epb_table.yaml  sil_cucu_epb_table.yaml  (+3 more)
scripts/: install.sh  link_addon_configs.sh
(+19 files in other folders)
